# gstreamer-encoder

./: configure.ac
src/: Makefile.am  encoder-interface.cpp
